src/main/k8s/hb-contract-cover-route-prd.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: contract-cover-route-prod
spec:
  host: contract-cover.apps.osft4-rhaf.colsanitas.com
  to:
    kind: Service
    name: contract-cover-service
  port:
    targetPort: 8080
